@@ -1,5 +1,5 @@
 Changes
-lib/Apache2/Filter/CSS/LESSp.pm
+lib/Apache2/Filter/CSS/LESS.pm
 Makefile.PL
 MANIFEST
 MANIFEST.SKIP
