@@ -1,4 +1,4 @@
-Apache2::Filter::CSS::LESSp is Copyright (C) 2009, Michael Schout.
+Apache2::Filter::CSS::LESS is Copyright (C) 2009, Michael Schout.
 
 WHAT IS THIS?
 
