@@ -3,4 +3,4 @@
 use strict;
 use Test::More tests => 1;
 
-use_ok('Apache2::Filter::CSS::LESSp');
+use_ok('Apache2::Filter::CSS::LESS');
