@@ -1,9 +1,9 @@
 PerlSwitches -I@ServerRoot@/../lib
 
-PerlModule Apache2::Filter::CSS::LESSp
+PerlModule Apache2::Filter::CSS::LESS
 
 <LocationMatch "\.less$">
-    PerlOutputFilterHandler   Apache2::Filter::CSS::LESSp
+    PerlOutputFilterHandler   Apache2::Filter::CSS::LESS
 </LocationMatch>
 
 # vim: ft=apache
