@@ -1,5 +1,5 @@
 <html>
   <body>
-    test file for Apache2::Filter::CSS::LESSp
+    test file for Apache2::Filter::CSS::LESS
   </body>
 </html>
