@@ -1,7 +1,8 @@
-Revision history for Perl extension Apache2::Filter::CSS::LESSp.
+Revision history for Perl extension Apache2::Filter::CSS::LESS.
 
 CURRENT
     - add test for content type
+    - rename to Apache2::Filter::CSS::LESS (was Apache2::Filter::CSS::LESSp).
 
 0.10  Tue Nov 17 2009
     - initial version
